# duckdb-adaptive-compression

./: .gitignore  .gitmodules  CMakeLists.txt  JOB_runtime.txt  README.md  TPCH_runtime.txt  benchmarks.csv  classic_benchmarks.csv  installSDSL.sh  oom_benchmarks_random.csv  runJoinOrderBenchmark.sh  runSuccinctBenchmarks.sh  runTpch01.sh  runTpchBenchmark.sh  runTpchBenchmarkEmpty.sh  run_cmake.sh  run_diff_zipfian.sh  shell.nix  updated_benchmarks.csv
benchmark/: benchmark_runner.cpp  downloadIMDBParquet.sh
benchmark/fb_bench/: data_visualizer.py
benchmark/include/: benchmark_runner.hpp  duckdb_benchmark.hpp
benchmark/micro/: CMakeLists.txt  succinct.cpp
benchmark/micro/succinct/: buggy.cpp  distribution_changing.cpp  fb_binary_data_loader.cpp  fb_workload.cpp  normal_distribution.cpp  normal_over_time.cpp  out_of_memory.cpp  random.cpp  sequential.cpp  zipf.cpp  zipf_distribution.cpp  zipf_distribution_changing.cpp  zipf_distribution_diff_skews.cpp  zipf_over_time.cpp
benchmark/tpch/: startup.cpp
experiments/: plot_adaptive_over_time.py  plot_benchmarks.py  plot_diff_zipf_skews.py  plot_fb_workloads.py  plot_micro_benchmarks.py  plot_sdsl_microbenchmarks.py  plot_sdsl_perf_events.py  shell.nix
experiments/benchmark_plotter/: __init__.py  colors.py  style.py  texify.py  utils.py
experiments/data/: adaptive_succinct_over_time.txt  non_succinct_over_time.txt  (+8 more)
presentation/: .gitignore  main.tex
sdsl_tests/: benchmark.cpp  cache_test.cpp  compile.sh  perfEvent.hpp  perf_events.csv  perf_results.csv  simple_tests.cpp  tmp.cpp
src/: CMakeLists.txt
(+177 files in other folders)
